[package]
name = "stealth-swapd"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# HTTP
axum = "0.6"
tower = "0.4"
tower-http = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13.3"

# Security & Crypto
sha2 = "0.10"
ring = "0.17"
secrecy = { version = "0.8", features = ["serde"] }
curve25519-dalek = "4"
ed25519-compact = "1"
thiserror = "1"
serde_bytes = "0.11"
reqwest = { version = "0.11", features = ["json"] }